--- a/Social proof section challenge/main.css
+++ b/Social proof section challenge/main.css
@@ -20,3 +20,68 @@ html {
   margin: 0;
   box-sizing: border-box;
 }
+
+.wrapper {
+  width: 100%;
+  height: 100%;
+}
+
+.flex {
+  display: flex;
+}
+
+.top-section {
+  border: 2px solid blueviolet;
+  justify-content: space-evenly;
+  margin: 5rem 0 0 0;
+}
+.main-title {
+  /* border: 2px solid red; */
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.main-ratings {
+  /* border: 2px solid green; */
+  width: 40%;
+}
+
+.title {
+  margin-bottom: 2rem;
+  margin-right: 9rem;
+  color: var(--clr-neutral-900);
+}
+
+.description {
+  color: var(--clr-neutral-400);
+}
+
+.rating1,
+.rating2,
+.rating3 {
+  width: 75%;
+  background-color: var(--clr-neutral-200);
+  padding: 1rem;
+  margin: 2rem 0 0 0;
+  border-radius: 0.625rem;
+}
+
+.rating2 {
+  margin-left: 2rem;
+}
+
+.rating3 {
+  margin-left: 4rem;
+}
+
+.rating_description {
+  color: var(--clr-neutral-900);
+  font-weight: var(--fw-bold);
+  margin-left: 1.25rem;
+}
+
+div > :nth-child(1) {
+  margin-left: 0.5rem;
+}
